# discrete_adjoint

./: .gitignore  configure.ac  titan_inputs
src/adapt/: data_update.C  depchk.C  hadpt.C  refine2.C  unrefine.C  update_info_interp.C  updatenei.C
src/adjoint/: Makefile.am  adjoint_init.C  adjoint_test.C  bilinear_interp.C  calc_adjoint.C  calc_jacobain.C  compute_jacobian_elem.C  debug_flux.C  debug_routines.C  dual_grid_routines.C  dual_refine_unrefine.C  dual_repartition.C  dual_solver.C  error_compute.C  error_grid_routines.C  residual.C  uniform_refine.C
src/datstr/: Makefile.am  dualmesh.C  element2.C  hashtab2.C  htflush.C  jacobian.C  matrix.C  node.C
src/geoflow/: correct.f  corrector.C  drag_model.f  edge_states.C  eigen.f  element_weight.C  flux_srcs.C  get_coef_and_eigen.C  getcoef.f  move_data.C  predict.f  rnr.h  setup_geoflow.C  sgn.f  slopes.C  stats.C  step.C
src/gisapi/: GisApi.C  GisApi.h  GisAscFile.C  GisAscFile.h  GisBinFile.C  GisBinFile.h  GisCats.C  GisCats.h  GisGrid.C  GisGrid.h
src/header/: GMFG_hdfapi.h  Makefile.am  adjoint.h  constant.h  dualmesh.h  element2.h  extfun.h  exvar.h  flux_srcs.h  geoflow.h  hashtab.h  hpfem.h  jacobian.h  matrix.h  node.h  properties.h  recv.h  struct.h
src/main/: Makefile.am  datread.C  delete_tab.C  forward_solver.C  hpfem.C  init_piles.C  restart.C  update_topo.C
src/preproc/: Makefile.am  createfunky.C  element.h  element2.C  materialnames.C  node.C  node.h  preprocess.C
src/repartition/: BSFC_create_bins.C  BSFC_update_and_send_elements.C  fill.C  new_datatype.C  repartition_BSFC.C  repartition_BSFC.h  update_element_info.C
src/stochastic/: lhslib.C
src/tecplot/: GMFG_hdfconstants.h  Makefile.am  hd5calls.C  hd5calls.c  outsum.C  tecplot.C  xdfm_write.C
src/useful/: useful_lib.C
src/vectordatapreproc/: Makefile.am
