#
# automake template for src/adjoint directory
#
# $Id: Makefile.am 2 2014-05-22 19:26:11Z hossein $
#

noinst_LIBRARIES = libadjoint.a

libadjoint_a_SOURCES = dual_solver.C compute_jacobian_elem.C calc_jacobain.C adjoint_init.C \
                       residual.C calc_adjoint.C uniform_refine.C bilinear_interp.C \
                       error_compute.C adjoint_test.C debug_routines.C error_grid_routines.C\
                       dual_grid_routines.C dual_refine_unrefine.C dual_repartition.C 
                       





