#
# automake template for src/header directory
#
# $Id: Makefile.am 129 2007-06-07 19:54:28Z dkumar $
#

noinst_HEADERS = blas.h constant.h extfun.h  hashtab.h node.h element2.h properties.h \
	geoflow.h refined_neighbor_info.h struct.h exvar.h recv.h scale.h flux_srcs.h \
    GMFG_hdfapi.h dualmesh.h matrix.h jacobian.h adjoint.h hpfem.h
